Correct harvester module and add flexbox gridding

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,3 +34,17 @@ h1,h2,h3,h4,h5,h6 {
     background-color: darksalmon;
 }
 
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.plants {
+    flex-direction: row;
+    background-color: yellow;
+    padding: 6px;
+    font-size: large;
+
+}
+
